[tool.poetry]
name = "encoder"
version = "0.1.0"
description = ""
authors = ["Vaniel"]

[tool.poetry.dependencies]
python = "^3.10"
sh = "^1.14.3"
pylint = "^2.14.5"
flake8 = "^4.0.1"
rope = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
